update pom.xml for sonarcloud